<resources>
    <string name="app_name">OCR-Plugin</string>

    <!-- Generic messages -->
    <string name="ToDo">TODO</string>
    <string name="OK_text">OK</string>

    <!-- Fragment_AddLitt EditText -->
    <string name="hint_name">Den Grimme Ælling</string>
    <string name="hint_author">H.C Andersen</string>
    <string name="hint_period">Romantikken</string>
    <string name="hint_genre">Eventyr</string>
    <string name="hint_pages">13</string>
    <string name="hint_commentary">Evt. kommentarer.</string>

    <string name="helper_name">Navn</string>
    <string name="helper_author">Forfatter</string>
    <string name="helper_period">Periode</string>
    <string name="helper_genre">Genre</string>
    <string name="helper_pages">Sider i værket</string>

    <!-- Fragment_AddLitt Buttons -->
    <string name="btn_camera">Camera</string>
    <string name="btn_Storage">Storage</string>

    <!-- Fragment ScanImg Error messages -->
    <string name="errorTitle">Ooops !</string>
    <string name="errorNameMissing">You need to give your product a name</string>
    <string name="errorTextRecognizer">Couldn\'t find any tekst on the image!</string>
</resources>
